# HealthLink

./: .gitignore  177.f7383c1ab8e9210e.js  214.6bb66aee42157c08.js  214.bbb3fe0c6377b86f.js  285.156cf0dff7794096.js  306.a998a61a22d8034f.js  3rdpartylicenses.txt  404.html  601.407eb70eddd95dcf.js  601.660825e01b0f9fd7.js  659.b88f422088aeac71.js  843.4e1abfdb38a6bb23.js  958.d9225f0ef310f658.js  Makefile  README.md  common.35e0cb7217fb16b9.js  docker-compose.yml  index.html  main.7bc2b69f995c3280.js  main.ac7404996d5141e0.js  mkdocs.yml  package-lock.json  polyfills.e7d4e916788afbdb.js  pyproject.toml  readme.md  run.bash  runtime.7b1029ad06fb71c4.js  runtime.94027dd11ff1fe89.js  techstack.md  techstack.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  testing.yml
.idx/: dev.nix
api/authentication/: index.html
api/profile/: index.html
backend/: .coverage  .dockerignore  .env  Dockerfile  Justfile  Makefile  db.sqlite3  docker-compose.yml  env.sample  fly.toml  manage.py  pyproject.toml  requirements.txt  schema.yml  start.sh  tests_healthlink.cast  vercel.json
backend/.idx/: dev.nix
backend/chat/: consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py
backend/chat/views/: call.py  chat.py  transcript.py
backend/core/: admin.py  authentication.py  choices.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_doctorprofile_patientprofile_user_address_user_city_and_more.py  0003_alter_user_role.py  0004_alter_user_options_alter_user_managers_and_more.py  0005_remove_user_groups_remove_user_is_superuser_and_more.py  0006_remove_user_is_staff_user_is_active_user_is_admin.py  0007_alter_user_role.py  0008_alter_doctorprofile_profile_photo_url.py
backend/core/urls/: authentication.py  profile.py
backend/core/views/: authentication.py  choice.py  exceptions.py  profile.py
backend/healthlink/: __init__.py  asgi.py  celery.py  db.sqlite3  settings.py  urls.py  wsgi.py
backend/healthlink/dbm/: medical_data.json  populate.py
backend/healthlink/dbm/data/: medical_data.json  medicines.json
backend/healthlink/dbm/prod_data/: medical_tests_prod.json
backend/healthlink/scripts/: populate.py
backend/healthlink/scripts/data/: medicines.json  medicines_prod.json
backend/healthlink/settings/: base.py  local.py  prod.py
backend/healthlink/templates/: index.html
backend/healthlink/utils/: celery.py  custom_exc_handler.py  exceptions.py  response_handler.py
backend/llm/: chat_openai.py  utils.py
backend/ml/emotion/: predictions.py  predictions_v1.py  predictions_v2.py
backend/ml/openai/: chat.py  prompt.py  utils.py
backend/patient/: 123.py  models.py  serializers.py  urls.py
backend/patient/migrations/: 0001_initial.py
backend/patient/urls/: search.py
backend/patient/views/: appointment.py  emotion.py  exceptions.py  medical_test.py  medicine.py  records.py  search.py  url_patterns.py
backend/scripts/: populate.py  setup.sh  test.py
backend/templates/: index.html
backend/tests/: base.py  test_appointment.py  test_appointments.py  test_authentication.py  test_medical_data.py  test_profiles.py  test_records.py  test_search.py  variables.py
backend/tests/helpers/: shop_data.py  variables.py
devops/: .dockerignore  Dockerfile
docs/: authentication.md  index.md
docs/api/: authentication.md  profile.md
frontend/: .gitignore  README.md  angular.json  deploy.sh  gitignore  package-lock.json  package.json  run.sh
frontend/HealthLinkFront/: angular.json  package-lock.json  package.json
frontend/HealthLinkFront/src/: index.html
frontend/HealthLinkFront/src/app/: app.component.ts
frontend/src/: index.html  main.ts  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/addressform/: addressform.component.spec.ts  addressform.component.ts
frontend/src/app/chat/: chat.component.ts
frontend/src/app/doctor/: doctor.component.html  doctor.component.spec.ts  doctor.component.ts  doctorExtras.ts
frontend/src/app/interceptors/: auth.interceptor.ts
frontend/src/app/navigation/: navigation.component.html
frontend/src/app/patient/: patient.component.html  patient.component.ts
frontend/src/app/services/: auth.service.ts  forgot.service.ts  shared.service.ts
frontend/src/environment/: environment.ts
search/: search_index.json
(+305 files in other folders)
