[tool.poetry]
name = "HealthLink"
version = "0.1.0"
description = "HealthLink, A telemedicine plateform."
authors = ["Faisal Fida <69955157+faisal-fida@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
Django = "^5.0.2"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
PyJWT = "^2.8.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
dj-database-url = "^2.1.0"
celery = "^5.3.6"
redis = "^5.0.1"
daphne = "^4.1.2"
channels = "^4.1.0"
Faker = "^24.11.0"
langchain = "^0.1.16"
langchain-experimental = "^0.0.57"
langchain-openai = "^0.1.3"
presidio-analyzer = "^2.2.354"
presidio-anonymizer = "^2.2.354"
spacy = "^3.7.4"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
tensorflow = "^2.15.0"
keras = "^2.15.0"
numpy = "^1.25.2"
opencv-python = "^4.8.0.76"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pillow = "^10.3.0"
pygraphviz = "^1.12"
werkzeug = "^3.0.1"
django-extensions = "^3.2.3"
ruff = "^0.3.1"
mkdocs-material = "^9.5.15"
mkdocs-material-extensions = "^1.3.1"
drf-spectacular = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = [
    ".git",
    ".ipynb_checkpoints",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
]

line-length = 88
indent-width = 4

target-version = "py310"

cache-dir = "~/.cache/ruff"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []


[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

docstring-code-format = true